--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,5 +81,7 @@ dependencies {
 
 //    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
+
+    implementation 'com.google.android.material:material:1.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
